RESOLVED FIXED213985
[iPadOS] Unable to change focus between Google Docs windows by tapping
https://bugs.webkit.org/show_bug.cgi?id=213985
Summary [iPadOS] Unable to change focus between Google Docs windows by tapping
Wenson Hsieh
Reported 2020-07-05 22:16:50 PDT
Attachments
For EWS (50.52 KB, patch)
2020-07-05 23:31 PDT, Wenson Hsieh
no flags
Fix GTK/WPE builds (51.72 KB, patch)
2020-07-05 23:45 PDT, Wenson Hsieh
no flags
Patch (51.76 KB, patch)
2020-07-06 09:08 PDT, Wenson Hsieh
no flags
Wenson Hsieh
Comment 1 2020-07-05 23:31:39 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 2 2020-07-05 23:45:11 PDT Comment hidden (obsolete)
Wenson Hsieh
Comment 3 2020-07-06 09:08:27 PDT
Darin Adler
Comment 4 2020-07-06 11:48:18 PDT
Comment on attachment 403598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403598&action=review > Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1504 > + if (nativeWebTouchEvent.isPotentialTap() && self.hasHiddenContentEditable && self._hasFocusedElement && !self.window.keyWindow) > + [self.window makeKeyWindow]; Does the test cover all 4 of these changes?
Wenson Hsieh
Comment 5 2020-07-06 11:51:00 PDT
Comment on attachment 403598 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=403598&action=review >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1504 >> + [self.window makeKeyWindow]; > > Does the test cover all 4 of these changes? Unfortunately, the new test doesn’t cover the change in `-mouseGestureRecognizerChanged:` (since there’s currently no way to simulate real trackpad-y mouse events from WebKitTestRunner at the moment). The three other changes here are covered, however.
Wenson Hsieh
Comment 6 2020-07-06 11:57:55 PDT
(In reply to Wenson Hsieh from comment #5) > Comment on attachment 403598 [details] > Patch > > View in context: > https://bugs.webkit.org/attachment.cgi?id=403598&action=review > > >> Source/WebKit/UIProcess/ios/WKContentViewInteraction.mm:1504 > >> + [self.window makeKeyWindow]; > > > > Does the test cover all 4 of these changes? > > Unfortunately, the new test doesn’t cover the change in > `-mouseGestureRecognizerChanged:` (since there’s currently no way to > simulate real trackpad-y mouse events from WebKitTestRunner at the moment). I filed <https://bugs.webkit.org/show_bug.cgi?id=213995> to track this. > > The three other changes here are covered, however.
EWS
Comment 7 2020-07-06 12:45:58 PDT
Committed r263979: <https://trac.webkit.org/changeset/263979> All reviewed patches have been landed. Closing bug and clearing flags on attachment 403598 [details].
Note You need to log in before you can comment on or make changes to this bug.